--- a/index.html
+++ b/index.html
@@ -13,18 +13,32 @@
     <link rel="stylesheet" href="Styles/portfolio.css">
 </head>
 <body class="open-sans-normal">
-    <header>
+    <header class="header" >
         <nav> 
             <h3 class="nav-title"> 
                 Ma<span class="text-primery">r</span>y 
 
             </h3>
             <ul>
-                <li> <a href=""> Portfolio</a>  </li>
-                <li> <a href=""> Blog </a> </li>
-                <li> <a href=""> <button> Hire ME </button> </a> </li>
+                <li> <a class="dark-2" href=""> Portfolio</a>  </li>
+                <li> <a class="dark-2" href=""> Blog </a> </li>
+                <li> <a class="dark-2" href=""> <button class="btn-primary"> Hire ME </button> </a> </li>
             </ul> 
         </nav>
+
+        <div class="banner">
+             <div class="banner-content">
+                <h4 class="banner-greetings dark-2 ">Hi, I am</h4>
+                <h2 class="banner-title">Mary Hardy</h2>
+                <p class="banner-discription">
+                  Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.
+                    
+                </p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact</button>
+             </div>
+             <img class="banner-profile-pic" src="portfolio-resources-main/images/hardy.png" alt="">
+        </div>
 
     </header>
 
