--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
    
     <link rel="stylesheet" href="Styles/portfolio.css">
+
+    <script src="https://kit.fontawesome.com/c95041c813.js" crossorigin="anonymous"></script>
 </head>
 <body class="open-sans-normal">
     <header class="header secondary-background " >
@@ -34,8 +36,8 @@
                   Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.
                     
                 </p>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Contact</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn-primary"> <i class="fa-solid fa-phone"></i>  Contact</button>
              </div>
              <img class="banner-profile-pic" src="portfolio-resources-main/images/hardy.png" alt="">
         </div>
@@ -161,7 +163,7 @@
                 </div>
             </div>
             <div class="text-center resume-download-cv">
-                <button class="btn-primary" > Download CV </button>
+                <button class="btn-primary" > <i class="fa-regular fa-download"></i> Download CV </button>
             </div>
             
           </section>
